# medi

./: .dod.yml  .gitignore  .tbdflow.yml  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
docs/: DESIGN.md  medi.tape
docs/adr/: 01-use-sled.md  02-db-centric.md
src/: cli.rs  colours.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  note.rs  preview.rs  search.rs  task.rs
tests/: cli.rs
tests/resources/: mock_editor.sh  perf_test.sh
