[package]
name = "medi"
version = "0.13.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
repository = "https://github.com/cladam/medi"
readme = "README.md"
license = "MIT"
description = "CLI driven Markdown manager."
keywords = ["cli", "workflow", "markdown", "notes", "documentation"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
clap_complete = "4.5.57"
colored = "3.0.0"
thiserror = "2.0.16"
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.6"
rumdl = "0.0.144"
chrono = { version = "0.4.42", features = ["serde"] }
dialoguer = "0.12.0"
edit = "0.1.5"
sled = "0.34.7"
dirs = "6.0.0"
atty = "0.2.14"
tempfile = "3.22.0"
tantivy = "0.25.0"
lazy_static = "1.5.0"
self_update = "0.42.0"
crossbeam-channel = "0.5.15"
regex = "1.11.2"
eframe = "0.32.3"
egui = "0.32.3"
egui_commonmark = { version = "0.21.1", features = ["better_syntax_highlighting", "svg", "fetch"] }
image = "0.25.8"
[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[dev-dependencies]
rand = "0.9.2"
serial_test = "3.2.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"

[target.'cfg(unix)'.dependencies]
skim = "0.20.5"

[lib]
name = "medi"
path = "src/lib.rs"